--- a/app/src/main/res/drawable/home.xml
+++ b/app/src/main/res/drawable/home.xml
@@ -1,4 +1,5 @@
-<vector android:height="200dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="200dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M288,464h-64a16,16 0,0 0,0 32h64a16,16 0,0 0,0 -32zM304,416h-96a16,16 0,0 0,0 32h96a16,16 0,0 0,0 -32zM369.42,62.69C339.35,32.58 299.07,16 256,16A159.62,159.62 0,0 0,96 176c0,46.62 17.87,90.23 49,119.64l4.36,4.09C167.37,316.57 192,339.64 192,360v24a16,16 0,0 0,16 16h24a8,8 0,0 0,8 -8V274.82a8,8 0,0 0,-5.13 -7.47A130.73,130.73 0,0 1,208.71 253a16,16 0,1 1,18.58 -26c7.4,5.24 21.65,13 28.71,13s21.31,-7.78 28.73,-13a16,16 0,0 1,18.56 26,130.73 130.73,0 0,1 -26.16,14.32 8,8 0,0 0,-5.13 7.47V392a8,8 0,0 0,8 8h24a16,16 0,0 0,16 -16v-24c0,-19.88 24.36,-42.93 42.15,-59.77l4.91,-4.66C399.08,265 416,223.61 416,176a159.16,159.16 0,0 0,-46.58 -113.31z"/>
+<vector android:height="150dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="150dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M261.56,101.28a8,8 0,0 0,-11.06 0L66.4,277.15a8,8 0,0 0,-2.47 5.79L63.9,448a32,32 0,0 0,32 32H192a16,16 0,0 0,16 -16V328a8,8 0,0 1,8 -8h80a8,8 0,0 1,8 8v136a16,16 0,0 0,16 16h96.06a32,32 0,0 0,32 -32V282.94a8,8 0,0 0,-2.47 -5.79z"/>
+    <path android:fillColor="#FF000000" android:pathData="M490.91,244.15l-74.8,-71.56V64a16,16 0,0 0,-16 -16h-48a16,16 0,0 0,-16 16v32l-57.92,-55.38C272.77,35.14 264.71,32 256,32c-8.68,0 -16.72,3.14 -22.14,8.63l-212.7,203.5c-6.22,6 -7,15.87 -1.34,22.37A16,16 0,0 0,43 267.56L250.5,69.28a8,8 0,0 1,11.06 0l207.52,198.28a16,16 0,0 0,22.59 -0.44c6.14,-6.36 5.63,-16.86 -0.76,-22.97z"/>
 </vector>
